WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232907
REGRESSION(
r285246
): Broke FixedVector
https://bugs.webkit.org/show_bug.cgi?id=232907
Summary
REGRESSION(r285246): Broke FixedVector
WebKit Commit Bot
Reported
2021-11-09 15:03:56 PST
https://commits.webkit.org/r285246
introduced a regression: Broke FixedVector This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r285246
(19.98 KB, patch)
2021-11-09 15:04 PST
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2021-11-09 15:04:08 PST
Created
attachment 443735
[details]
REVERT of
r285246
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2021-11-09 15:06:14 PST
Committed
r285538
(
244055@main
): <
https://commits.webkit.org/244055@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443735
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-09 15:07:21 PST
<
rdar://problem/85225193
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug