Cherry-pick r285538. rdar://problem/85234466

Unreviewed, reverting r285246.
    https://bugs.webkit.org/show_bug.cgi?id=232907

    Broke FixedVector

    Reverted changeset:

    "[JSC] Clean up StructureStubInfo initialization"
    https://bugs.webkit.org/show_bug.cgi?id=232652
    https://commits.webkit.org/r285246

    Canonical link: https://commits.webkit.org/244055@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285538 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/243917.3@safari-613.1.8-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.8-branch@285553 268f45cc-cd09-0410-ab3c-d52691b4dbfc